Add Phase A.1: InternalRowSerializer targeting Spark InternalRow
Adds encoder-spark module (Scala 3, consumes Spark 4.1.2 Scala 2.13 jars
via CrossVersion.for3Use2_13) so compile-time Mirror-derived serializers
write directly into Spark's InternalRow — the same target Spark's
ExpressionEncoder.createSerializer() produces. This closes the
apples-to-apples comparison gap for the Phase A encoder benchmark
report.

- SparkTypeMapping: bidirectional ProtoType <-> Spark DataType, covers
  all Spark 4.1 AgnosticEncoder dataType cases except the deliberately
  out-of-scope Spark-class external types (Decimal, CalendarInterval,
  VariantVal, Geography, Geometry).
- SparkInternalTypeConverter: produces UTF8String, Decimal, epoch
  days/micros, GenericArrayData, ArrayBasedMapData, nested
  GenericInternalRow.
- InternalRowSerializer.derived[T]: composes the existing
  InlineRowSerializer compile-time inlining with the new converter;
  no runtime reflection.
- 15 smoke tests covering simple / decimal+temporal / Option (Some+None)
  / List / LocalTime shapes.

Also bumps all Spark-dependent modules to 4.1.2 — LocalTimeEncoder lands
in 4.1 and closes our only 'ProtoCatalyst ahead on temporal types' gap.

docs/ENCODER_PARITY.md captures the full cross-referenced parity matrix
against Spark 4.1.2 AgnosticEncoder.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>